# f_ai_carls_capstone.01

./: .gitignore  README.md  main.py  pyproject.toml
docs/: execution_plan.md
scripts/: config.py
