[project]
name = "f_ai_carls_capstone.01"
version = "0.1.0"
description = "dont go to production with this as it is"
requires-python = ">=3.11,<3.13"
dependencies = [
    "polars>=0.20.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "faker>=20.0.0",
    "logging>=0.4.9.6",
    "pathlib>=1.0.1",
    "join>=0.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
